button stretch fixed

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -1212,7 +1212,7 @@ main {
                         width: 32px;
                         height: 32px;
                         border: none;
-                        border-radius: 50%;
+                        border-radius: 50px;
                         background: white;
                         background: hsla(0, 0%, 100%, 0.5);
                         cursor: pointer;
